--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,7 @@ services:
 
   passwordapi-app:
     build: . # Constrói a imagem a partir do Dockerfile no diretório atual
+    container_name: api-password-vault
     ports:
       - "8080:8080"
     environment:
@@ -27,6 +28,7 @@ services:
       SPRING_DATASOURCE_URL: jdbc:mysql://mysql-db:3306/passworddb?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
       SPRING_DATASOURCE_USERNAME: root
       SPRING_DATASOURCE_PASSWORD: admin
+      SERVER-PORT: 8080
     depends_on:
       mysql-db:
         condition: service_healthy # Garante que o MySQL esteja saudável antes de iniciar a API
