--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -7,12 +7,20 @@ on:
     branches: [ "main" ]
 
 jobs:
-
   build:
-
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v4
-    - name: Build the Docker image
+    - uses: actions/checkout@v4 # 1. Faz o checkout do seu código
+    
+    - name: Set up JDK 17 # 2. Configura o ambiente Java
+      uses: actions/setup-java@v4
+      with:
+        java-version: '17' # Certifique-se de que é a versão correta do seu projeto
+        distribution: 'temurin'
+        cache: 'maven' # Cacheia dependências Maven para builds mais rápidos
+
+    - name: Build with Maven # 3. Compila o projeto e gera o JAR
+      run: mvn clean install -DskipTests # -DskipTests para pular testes se não forem necessários no build do CI
+
+    - name: Build the Docker image # 4. Constrói a imagem Docker (agora o JAR existe!)
       run: docker build . --file Dockerfile --tag api-password-vault:$(date +%s)
